# live-bootcamp-project

./: .codecov.yml  .gitignore  Cargo.toml  README.md  compose.yml  cspell.json
.github/workflows/: codecov.yml  eslint.yml  prod.yml  rust-clippy.yml
app-service/: Cargo.toml
app-service/src/: main.rs
auth-service/: .env  Cargo.toml  sqlx-data.json
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/domain/: data_stores.rs  email.rs  error.rs  mod.rs  password.rs
auth-service/src/routes/: login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_user_store.rs  mock_email_client.rs  mod.rs  postmark_email_client.rs
auth-service/src/services/data_stores/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
