[package]
name = "app-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["cookie"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12.4", default-features = false, features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
askama = "0.12.1"
