[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
async-trait = "0.1.80"
validator = "0.18.1"
axum-extra = { version = "0.9.3", features = ["cookie"] }
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
rand = "0.8.5"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "offline", "migrate"] }

[dev-dependencies]
reqwest = { version = "0.12.5", features = ["json", "cookies"] }