[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "cors", "trace"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
async-trait = "0.1.80"
validator = "0.18.1"
axum-extra = { version = "0.9.3", features = ["cookie"] }
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
rand = "0.8.5"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "offline", "migrate"] }
argon2 = { version = "0.5.3", features = ["std"]}
test_helpers = { git = "https://github.com/letsgetrusty/test-helpers.git" }
redis = { version = "0.25.4", features = ["tokio-comp"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-error = "0.2.0"
thiserror = "1.0.61"
color-eyre = "0.6.3"

[dev-dependencies]
reqwest = { version = "0.12.5", features = ["json", "cookies"] }